--- a/Billed-app-FR-Front/src/css/newbill.css
+++ b/Billed-app-FR-Front/src/css/newbill.css
@@ -61,3 +61,14 @@ textarea:focus, input:focus, select:focus {
 *[placeholder] {
   color: #0E5AE5 !important;
 }
+.error-extension {
+  color: red;
+}
+
+.show-error {
+  display: block;
+}
+
+.hide-error {
+  display: none;
+}
